admin/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navosec-admin
  labels:
    name: navosec-admin
    navosec.io/tier: admin
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
