admin/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navosec-admin
  namespace: navosec-admin
  labels:
    app: navosec-admin
spec:
  selector:
    app: navosec-admin
  ports:
    - name: http
      port: 80
      targetPort: http
